--- a/roles/common/templates/motd.j2
+++ b/roles/common/templates/motd.j2
@@ -1,9 +1,6 @@
 {{ kernel_version_string.stdout }}
- _____             _
-|__  /___ __ _ ___| |__
-  / // __/ _` / __| '_ \
- / /| (_| (_| \__ \ | | |
-/____\___\__,_|___/_| |_|
+
+Koto
 
 Hostname: {{ ansible_fqdn }}
 IP address: {{ ansible_default_ipv4.address }}
